* When the user visits the login page and is already authenticated (i.e. they
  have a valid ticket granting cookie), a message is shown at the top 
  indicating that they are already logged in.
* Fixed bug that was causing all proxy-granting tickets to be deleted whenever
  any user logged out. Only the PGTs for the user that is logging out are now
  being deleted.
* Trailing slashes in service URLs are now ignored when validating service
  and proxy tickets (e.g. "http://www.google.com" and "http://www.google.com/"
  are now considered to be the same service URL).
* Authenticators now raise AuthenticatorError exceptions when encountering
  a problem/error. This makes it easier to send feedback to the user.
  However, other exceptions should still be raised when errors ought
  not be recoverable (i.e. programming errors).
* Fixed serious vulnerability in LDAP authenticator where under some
  cirumstances the user could just enter '*' as their username to match 
  any username. The LDAP authenticator will now refuse to process logins 
  with usernames that contain the characters * ( ) \ / and the NULL 
  character \0.
* Views are no longer xhtml-validated. Markaby's auto-validation was turned
  off to allow for use of the autocomplete property on inputs, since this is
  the only viable way of turning off password storage in IE and Firefox at
  the page level.
* Fixed some minor bugs in the login view.


=== 0.2.0 :: 2007-03-20

* ruby-casserver now behaves more like a real command-line app, accepting
  various command line arguments including -h (help), -v (version), -c (use
  an alternate config.yml), and -d (daemonize, when using webrick or mongrel 
  mode).
* Special characters in CAS XML responses are now properly encoded into XML
  entities
* CAS XML responses are no longer auto-indented... Markaby's indentation
  seemed to be causing problems with the PHP CAS client.
* Misc minor bug fixes/cleanup.

=== 0.1.0 :: 2007-03-01

* First public release.